# hello-world

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci-casper-rust-contract.yml  nightly-scheduled-test.yml
contract/: Cargo.toml
contract/src/: main.rs
tests/: Cargo.toml
tests/src/: hello_world.rs  integration_tests.rs  lib.rs
tests/wasm/: mint_install.wasm  pos_install.wasm  standard_payment.wasm  standard_payment_install.wasm
