[package]
name = "contract"
version = "0.1.0"
authors = ["darthsiroftardis <karan@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casperlabs-contract", version="0.6.1" }
types = { package = "casperlabs-types", version="0.6.1" }
casperlabs_contract_macro = { git = "https://github.com/CasperLabs/casperlabs_contract_macro", branch = "dev", package = "casperlabs-contract-macro"}


[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std", "contract/test-support"]
