[package]
name = "tests"
version = "0.1.0"
authors = ["darthsiroftardis <karan@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
casperlabs-contract = "0.6.1"
casperlabs-types = "0.6.1"
casperlabs-engine-test-support = "0.8.1"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std", "casperlabs-engine-test-support/test-support", "casperlabs-contract/test-support"]
