[package]
name = "tests"
version = "0.1.0"
authors = ["darthsiroftardis <karan@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-types = "0.7.0"
casper-engine-test-support = "0.7.0"

[features]
default = ["casper-types/std"]